[package]
name = "chat6"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "io-std","rt-multi-thread", "io-util"] }
async-trait = "0.1.81"
futures = { version = "0.3.30"}
libp2p = { version = "0.53.2", features = [ "tokio", "gossipsub", "noise", "mdns", "macros", "tcp", "yamux"  ] }
tracing = {version = "0.1.40"}
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

